--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Mariano Fajardo Islas, Griselda, Carlo Armando, Uriel",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "css": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
